Fixed the navbar to be responsive and to collapse when used in reduced viewports/mobile; added creation date to comment models; updated campground show page to display comment date; added date-and-time dependency to better format the comment dates; updated the landing page to have a text outline on the welcome message.

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -13,6 +13,14 @@ body {
     color: #fff;
 }
 
+.element {
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+
 .slideshow {
     position: fixed;
     width: 100%;
